vlib/v/checker/tests/assign_sumtype_err.out
vlib/v/checker/tests/assign_sumtype_err.vv:14:9: error: cannot assign to `decl`: expected `Decl`, not `Stmt`
   12 |     stmt := Stmt(Decl{})
   13 |     mut decl := Decl{}
   14 |     decl = stmt
      |            ~~~~
   15 |     _ = decl
   16 | }
